log
ju., 21 de abr. de 2022 11:09:23: 
 tests:  1|8
total_score: 0/70
37572b0
ju., 21 de abr. de 2022 11:09:56: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  3|8
total_score: 0/70
042e619
ju., 21 de abr. de 2022 11:10:53: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
2687168
ju., 21 de abr. de 2022 11:27:52: 
 treemap.c | 20 ++++++++++++++++++--
 1 file changed, 18 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:93:16: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
     return tree->current;
            ~~~~^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
207f9cd
ju., 21 de abr. de 2022 11:30:02: 
 treemap.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  0|0
0b9d528
ju., 21 de abr. de 2022 11:30:54: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|7
total_score: 5/70
a5ae0e8
ju., 21 de abr. de 2022 11:31:34: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
9252845
ju., 21 de abr. de 2022 11:34:10: 
 treemap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  11|6
total_score: 15/70
30ab3ec
ju., 21 de abr. de 2022 11:38:57: 
 treemap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  6|7
total_score: 5/70
b01125f
ju., 21 de abr. de 2022 11:39:24: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
aba68f6
ju., 21 de abr. de 2022 11:49:06: 
 treemap.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:53:30: error: 'return' with a value, in function returning void [-Werror]
     if (tree == NULL) return NULL;
                              ^~~~
treemap.c:51:6: note: declared here
 void insertTreeMap(TreeMap * tree, void* key, void * value) {
      ^~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
3373c39
ju., 21 de abr. de 2022 11:53:15: 
 treemap.c | 11 +++++------
 1 file changed, 5 insertions(+), 6 deletions(-)
 tests:  0|0
78a227b
ju., 21 de abr. de 2022 12:04:57: 
 treemap.c | 21 +++++++++------------
 1 file changed, 9 insertions(+), 12 deletions(-)
 tests:  12|6
total_score: 15/70
3af1854
ju., 21 de abr. de 2022 12:06:19: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  12|6
total_score: 15/70
c08e5b4
ju., 21 de abr. de 2022 12:07:23: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|5
total_score: 25/70
b5435a2
ju., 21 de abr. de 2022 12:09:53: 
 treemap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  15|4
total_score: 25/70
5cca416
ju., 21 de abr. de 2022 12:21:45: 
 treemap.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  16|4
total_score: 30/70
13d2bae
24 Apr 2022 18:57:15: 
 treemap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
test.c:6:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
512cd29
24 Apr 2022 19:00:02: 
 tests:  0|0
1d40721
24 Apr 2022 19:03:50: 
 treemap.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  16|4
total_score: 30/70
6021573
24 Apr 2022 19:06:33: 
 treemap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
In file included from test.c:4:
treemap.c: In function 'removeNode':
treemap.c:88:12: error: suggest explicit braces to avoid ambiguous 'else' [-Werror=dangling-else]
   88 |         if (node->left == NULL)
      |            ^
test.c:503:5: error: 'main' is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
At top level:
test.c:503:5: error: 'main' defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:6:8: error: '_strdup2' defined but not used [-Werror=unused-function]
    6 | char * _strdup2(const char * str) {
      |        ^~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
55ab814
24 Apr 2022 19:08:32: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  16|4
total_score: 30/70
de28eef
